Cleanup code via IntelliJ's code inspection.
Replace String.indexOf() with String.contains().
replace StringBuffer with StringBuilder.
Remove unnecessary boxing.
Replace explicit Generics type with <>.
Collapse catch blocks.
Simplify via lambdas.
Simplify Map operations.
Use Objects.requireNonNull().