@@ -23,6 +23,7 @@ import java.io.InputStream;
 import java.io.InputStreamReader;
 import java.io.OutputStream;
 import java.util.Arrays;
+import java.util.List;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -80,8 +81,7 @@ public class CombineFilesJob extends AbstractCopyJob {
         } catch (IOException e) {
             LOGGER.debug("Caught exception", e);
             showErrorDialog(errorDialogTitle,
-                Translator.get("error_while_transferring", destFile.getName()),
-                Arrays.asList(FileJobAction.CANCEL)
+                Translator.get("error_while_transferring", destFile.getName()), List.of(FileJobAction.CANCEL)
             );
             interrupt();
             return false;
@@ -111,8 +111,7 @@ public class CombineFilesJob extends AbstractCopyJob {
         } catch (IOException e) {
             LOGGER.debug("Caught exception", e);
             showErrorDialog(errorDialogTitle,
-                    Translator.get("error_while_transferring", destFile.getName()),
-                    Arrays.asList(FileJobAction.CANCEL)
+                    Translator.get("error_while_transferring", destFile.getName()), List.of(FileJobAction.CANCEL)
             );
             interrupt();
         }
@@ -153,8 +152,7 @@ public class CombineFilesJob extends AbstractCopyJob {
     private void checkCRC() {
         if (crcFile == null || !crcFile.exists()) {
             showErrorDialog(errorDialogTitle,
-                    Translator.get("combine_files_job.no_crc_file"),
-                    Arrays.asList(FileJobAction.OK)
+                    Translator.get("combine_files_job.no_crc_file"), List.of(FileJobAction.OK)
             );
             return;
         }
@@ -164,13 +162,13 @@ public class CombineFilesJob extends AbstractCopyJob {
 			crcLine = crcLine.substring(crcLine.lastIndexOf(' ') + 1).trim();
 			String crcDest = destFile.calculateChecksum("CRC32");
 			if (!crcLine.equals(crcDest)) {
-				showErrorDialog(errorDialogTitle, Translator.get("combine_files_job.crc_check_failed", crcDest, crcLine), Arrays.asList(FileJobAction.OK));
+				showErrorDialog(errorDialogTitle, Translator.get("combine_files_job.crc_check_failed", crcDest, crcLine), List.of(FileJobAction.OK));
 			} else {
-				showErrorDialog(Translator.get("combine_files_dialog.error_title"), Translator.get("combine_files_job.crc_ok"), Arrays.asList(FileJobAction.OK));
+				showErrorDialog(Translator.get("combine_files_dialog.error_title"), Translator.get("combine_files_job.crc_ok"), List.of(FileJobAction.OK));
 			}
 		} catch (Exception e) {
 			LOGGER.debug("Caught exception", e);
-			showErrorDialog(errorDialogTitle, Translator.get("combine_files_job.crc_read_error"), Arrays.asList(FileJobAction.CANCEL));
+			showErrorDialog(errorDialogTitle, Translator.get("combine_files_job.crc_read_error"), List.of(FileJobAction.CANCEL));
 		}
     }
 
@@ -184,8 +182,7 @@ public class CombineFilesJob extends AbstractCopyJob {
             } catch (IOException e) {
                 LOGGER.debug("Caught exception", e);
                 showErrorDialog(errorDialogTitle,
-                        Translator.get("error_while_transferring", destFile.getName()),
-                        Arrays.asList(FileJobAction.CANCEL)
+                        Translator.get("error_while_transferring", destFile.getName()), List.of(FileJobAction.CANCEL)
                 );
             }
         }
